<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ShoeStore">Shoe Store</string>
    <string name="Email">Email:</string>
    <string name="password">Password:</string>
    <string name="enterEmail">Enter your Email</string>
    <string name="enterPassword">enter Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="Welcome">Welcome to Shoe Store app</string>
    <string name="track_your_shoe">You can track your shoe store with this app.</string>
    <string name="next">Next</string>
    <string name="Instruction">Please login or register so you could add your shoes</string>
    <string name="shoe_detail">add the detail of shoe to get the shoes list.</string>
    <string name="shoeName">Shoe name</string>
    <string name="company">Company</string>
    <string name="shoeSize">Shoe size</string>
    <string name="description">Decription</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="shoeInventoryDesc">Shoe store app provides an inventory list of shoes</string>
    <string name="loginErrorMessage">please enter email and password to login or register</string>
    <string name="shoe_name">Name</string>
    <string name="test_text">testText</string>
    <string name="shoe_size">Size</string>
    <string name="logout">Logout</string>
</resources>
