<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<data>
    <variable
        name="viewModel"
        type="com.udacity.shoestore.SharedViewModel" />
</data>

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment">


    <EditText
        android:id="@+id/shoe_name"
        style="@style/EditText"
        android:layout_width="254dp"
        android:layout_marginTop="48dp"
        android:hint="@string/shoeName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@={viewModel.shoeName}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/shoe_company"
        style="@style/EditText"
        android:layout_width="254dp"
        android:layout_marginTop="16dp"
        android:hint="@string/company"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@={viewModel.shoeCompany}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoe_name" />

    <EditText
        android:id="@+id/shoe_decript"
        style="@style/EditText"
        android:layout_width="254dp"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:text="@={viewModel.shoeDescription}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoe_size"
        app:layout_constraintVertical_bias="0.042" />

    <EditText
        android:id="@+id/shoe_size"
        style="@style/EditText"
        android:layout_width="254dp"
        android:layout_marginTop="16dp"
        android:hint="@string/shoeSize"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@={viewModel.shoeSize}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoe_company" />

    <Button
        android:id="@+id/cancel_button"
        style="@style/button"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoe_decript"
        app:layout_constraintVertical_bias="0.185" />

    <Button
        android:id="@+id/save_button"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancel_button"
        app:layout_constraintTop_toTopOf="@+id/cancel_button"
        app:layout_constraintVertical_bias="0.0"
        style="@style/button"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>