<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructionsFragment">


    <TextView
        android:id="@+id/ShoeStore"
        android:layout_width="168dp"
        android:layout_height="77dp"
        android:fontFamily="@font/aguafina_script"
        android:text="@string/ShoeStore"
        android:textColor="@android:color/holo_purple"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="327dp"
        android:layout_height="75dp"
        android:padding="8dp"
        android:text="@string/shoeInventoryDesc"
        android:textColor="#2935CC"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShoeStore"
        app:layout_constraintVertical_bias="0.226" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="327dp"
        android:layout_height="75dp"
        android:padding="8dp"
        android:shadowColor="#03A9F4"
        android:text="@string/shoe_detail"
        android:textColor="#0091EA"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.068" />

    <Button
        android:id="@+id/next_button"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934"
        style="@style/button"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>