<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<data>
    <variable
        name="viewModel"
        type="com.udacity.shoestore.SharedViewModel" />
    <variable
        name="loginFragment"
        type="com.udacity.shoestore.LoginFragment" />
</data>
<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/ShoeStore"
        android:layout_width="168dp"
        android:layout_height="77dp"
        android:fontFamily="@font/aguafina_script"
        android:text="@string/ShoeStore"
        android:textColor="@android:color/holo_purple"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="321dp"
        android:layout_height="101dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:shadowColor="#3F51B5"
        android:text="@string/Instruction"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShoeStore"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/emailText"
        style="@style/TextLabel"
        android:text="@string/Email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.159" />

    <TextView
        android:id="@+id/PasswordText"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailText"
        app:layout_constraintVertical_bias="0.0"
        style="@style/TextLabel"/>

    <EditText
        android:id="@+id/inputEmail"
        style="@style/EditText"
        android:layout_width="213dp"
        android:layout_height="56dp"
        android:inputType="textEmailAddress"
        android:text="@={viewModel.email}"
        app:layout_constraintBottom_toBottomOf="@+id/emailText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.646"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/emailText"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/inputPassword"
        style="@style/EditText"
        android:inputType="textPassword"
        android:text="@={viewModel.pass}"
        app:layout_constraintBottom_toBottomOf="@+id/PasswordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/PasswordText"
        app:layout_constraintTop_toTopOf="@+id/PasswordText"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/Login_button"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/register_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        app:layout_constraintVertical_bias="0.641"
        style="@style/button"/>

    <Button
        android:id="@+id/register_button"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="@+id/Login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Login_button"
        app:layout_constraintTop_toTopOf="@+id/Login_button"
        style="@style/button"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>