<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="8sp"
    app:cardBackgroundColor="@color/colorCardView">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/item">


    <TextView
        android:id="@+id/shoe_company"
        style="@style/shoeItemValue"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:gravity="start"
        android:text="@string/test_text"
        app:layout_constraintBottom_toBottomOf="@+id/shoe_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/shoe_size"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/shoe_description"
        style="@style/shoeItemValue"
        android:layout_marginTop="12dp"
        android:gravity="start"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:text="@string/test_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoe_size"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/shoe_size"
        style="@style/shoeItemValue"
        android:layout_marginStart="12dp"
        android:text="@string/test_text"
        app:layout_constraintBottom_toBottomOf="@+id/shoe_name"
        app:layout_constraintStart_toEndOf="@+id/shoe_name"
        app:layout_constraintTop_toTopOf="@+id/shoe_name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/shoe_name"
        style="@style/shoeItemValue"
        android:layout_width="140dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:gravity="start"
        android:text="@string/test_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView13"
        style="@style/shoeItemLabel"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="134dp"
        android:text="@string/shoe_size"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toStartOf="@+id/textView14"
        app:layout_constraintHorizontal_bias="0.329"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView14"
        android:layout_marginEnd="16dp"
        android:text="@string/company"
        style="@style/shoeItemLabel"
        app:layout_constraintBottom_toBottomOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView12"
        style="@style/shoeItemLabel"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/shoeName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
</layout>